[package]
name = "reddit_news_checker"
version = "0.3.4"
authors = ["phil0x2e <ph-ketteni@t-online.de>"]
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking"]}
clap = "2.33"
prgrs = "0.6"
