[package]
name = "reddit_news_checker"
version = "0.4.0"
authors = ["phil0x2e <ph-ketteni@t-online.de>"]
edition = '2018'
license-file = 'LICENSE'
license = 'GPL-3.0-or-later'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking"]}
clap = "2.33"
prgrs = "0.6"
